added additional plugins for telegraf

--- a/templates/plugins/01-opentsdb.conf.erb
+++ b/templates/plugins/01-opentsdb.conf.erb
@@ -1,5 +1,9 @@
 # THIS FILE IS MANAGED BY PUPPET (created by telegraf::plugins::opentsdb)
 
+###############################################################################
+#                         OUTPUT PLUGIN OPENTSDB                              #
+###############################################################################
+
 # Configuration for opentsdb server to send metrics to
 [outputs.opentsdb]
 
