--- a/templates/telegraf.conf.erb
+++ b/templates/telegraf.conf.erb
@@ -34,13 +34,13 @@
 # Configuration for telegraf agent
 [agent]
   # Default data collection interval for all plugins
-  interval = "10s"
+  interval = "<%= @agent_collection_interval %>"
   # Rounds collection interval to 'interval'
   # ie, if interval="10s" then always collect on :00, :10, :20, etc.
   round_interval = true
 
   # Default data flushing interval for all outputs
-  flush_interval = "10s"
+  flush_interval = "<%= @agent_flush_interval %>"
   # Jitter the flush interval by a random range
   # ie, a jitter of 5s and interval 10s means flush will happen every 10-15s
   flush_jitter = "5s"
@@ -69,7 +69,7 @@
   # Multiple urls can be specified for InfluxDB cluster support. Server to
   # write to will be randomly chosen each interval.
   # urls = ["http://localhost:8086"] # required.
-  urls = <%= @outputs_influxdb_urls %>
+  urls = ["<%= @outputs_influxdb_urls.join('","') %>"]
 
   # The target database for metrics. This database must already exist
   # database = "telegraf" # required.
@@ -77,7 +77,7 @@
 
   # Precision of writes, valid values are n, u, ms, s, m, and h
   # note: using second precision greatly helps InfluxDB compression
-  precision = "s"
+  precision = "<%= @outputs_influxdb_precision %>"
 
   # Connection timeout (for the connection with InfluxDB), formatted as a string.
   # Valid time units are "ns", "us" (or "µs"), "ms", "s", "m", "h".
