--- a/templates/plugins/40-puppetagent.conf.erb
+++ b/templates/plugins/40-puppetagent.conf.erb
@@ -8,4 +8,4 @@
 [puppetagent]
 
   # Location of puppet last run summary file
-  location = "/var/lib/puppet/state/last_run_summary.yaml"
+  location = <%= scope['telegraf::plugins::puppetagent::location'] %>
