There was an agent_interval option but the template didn't do anything with it.  It does now.  I also added agent_flush_interval.

--- a/templates/telegraf.conf.erb
+++ b/templates/telegraf.conf.erb
@@ -34,13 +34,13 @@
 # Configuration for telegraf agent
 [agent]
   # Default data collection interval for all plugins
-  interval = "10s"
+  interval = "<%= @agent_interval %>"
   # Rounds collection interval to 'interval'
   # ie, if interval="10s" then always collect on :00, :10, :20, etc.
   round_interval = true
 
   # Default data flushing interval for all outputs
-  flush_interval = "10s"
+  flush_interval = "<%= @agent_flush_interval %>"
   # Jitter the flush interval by a random range
   # ie, a jitter of 5s and interval 10s means flush will happen every 10-15s
   flush_jitter = "5s"
