apply patches of @thirdeyenick, make puppet-telegraf ready for 0.12.x and 0.13.x

--- a/templates/plugins/01-opentsdb.conf.erb
+++ b/templates/plugins/01-opentsdb.conf.erb
@@ -5,7 +5,7 @@
 ###############################################################################
 
 # Configuration for opentsdb server to send metrics to
-[outputs.opentsdb]
+[[outputs.opentsdb]]
 
   # prefix for metrics keys
   prefix = "<%= @opentsdb_prefix %>"
