--- a/templates/plugins/30-mysql.conf.erb
+++ b/templates/plugins/30-mysql.conf.erb
@@ -5,7 +5,7 @@
 ###############################################################################
 
 # Read metrics from mysql
-[mysql]
+[[inputs.mysql]]
 
   # specify servers via a url matching:
   #  [username[:password]@][protocol[(address)]]/[?tls=[true|false|skip-verify]]
