--- a/templates/plugins/31-postgresql.conf.erb
+++ b/templates/plugins/31-postgresql.conf.erb
@@ -6,10 +6,7 @@
 
 
 # Read metrics from postgresql
-[postgresql]
-
-  # specify servers via an array of tables
-  [[postgresql.servers]]
+[[postgresql]]
 
   # specify address via a url matching:
   #   postgres://[pqgotest[:password]]@localhost[/dbname]?sslmode=[disable|verify-ca|verify-full]
