--- a/templates/plugins/40-puppetagent.conf.erb
+++ b/templates/plugins/40-puppetagent.conf.erb
@@ -5,7 +5,7 @@
 ###############################################################################
 
 # Read metrics from puppetagent
-[puppetagent]
+[[inputs.puppetagent]]
 
   # Location of puppet last run summary file
   location = "/var/lib/puppet/state/last_run_summary.yaml"
