--- a/templates/plugins/41-elasticsearch.conf.erb
+++ b/templates/plugins/41-elasticsearch.conf.erb
@@ -6,7 +6,7 @@
 
 
 # Read metrics from elasticsearch
-[elasticsearch]
+[[inputs.elasticsearch]]
   servers = <%= scope['telegraf::plugins::elasticsearch::servers'].inspect %>
   local = <%= scope['telegraf::plugins::elasticsearch::local'] %>
   cluster_health = <%= scope['telegraf::plugins::elasticsearch::cluster_health'] %>
