refactored telegraf module

--- a/templates/plugins/inputs/30-mysql.conf.erb
+++ b/templates/plugins/inputs/30-mysql.conf.erb
@@ -1,4 +1,4 @@
-# THIS FILE IS MANAGED BY PUPPET (created by telegraf::plugins::mysql)
+# THIS FILE IS MANAGED BY PUPPET (created by telegraf::plugins::inputs::mysql)
 
 ###############################################################################
 #                              PLUGIN MYSQL                                   #
