--- a/templates/plugins/inputs/31-postgresql.conf.erb
+++ b/templates/plugins/inputs/31-postgresql.conf.erb
@@ -1,4 +1,4 @@
-# THIS FILE IS MANAGED BY PUPPET (created by telegraf::plugins::postgresql)
+# THIS FILE IS MANAGED BY PUPPET (created by telegraf::plugins::inputs::postgresql)
 
 ###############################################################################
 #                              PLUGIN POSTGRESQL                              #
