--- a/templates/plugins/inputs/40-puppetagent.conf.erb
+++ b/templates/plugins/inputs/40-puppetagent.conf.erb
@@ -1,4 +1,4 @@
-# THIS FILE IS MANAGED BY PUPPET (created by telegraf::plugins::puppetagent)
+# THIS FILE IS MANAGED BY PUPPET (created by telegraf::plugins::inputs::puppetagent)
 
 ###############################################################################
 #                              PLUGIN PUPPETAGENT                             #
