--- a/templates/plugins/outputs/01-opentsdb.conf.erb
+++ b/templates/plugins/outputs/01-opentsdb.conf.erb
@@ -1,4 +1,4 @@
-# THIS FILE IS MANAGED BY PUPPET (created by telegraf::plugins::opentsdb)
+# THIS FILE IS MANAGED BY PUPPET (created by telegraf::plugins::outputs::opentsdb)
 
 ###############################################################################
 #                         OUTPUT PLUGIN OPENTSDB                              #
