--- a/templates/telegraf.conf.erb
+++ b/templates/telegraf.conf.erb
@@ -116,7 +116,7 @@
   #
   # By default, telegraf gather stats for all mountpoints.
   # Setting mountpoints will restrict the stats to the specified mountpoints.
-<% if scope['::telegraf::disk_mountpoints.any?']%>
+<% if scope['::telegraf::disk_mountpoints'].any? %>
   Mountpoints = <%= scope['::telegraf::disk_mountpoints'].inspect %>
 <% end %>
   # Ignore some mountpoints by filesystem type. For example (dev)tmpfs (usually
