added powerdns (closes #23)

--- a/templates/plugins/inputs/53-powerdns.conf.erb
+++ b/templates/plugins/inputs/53-powerdns.conf.erb
@@ -1,4 +1,4 @@
-# THIS FILE IS MANAGED BY PUPPET (created by telegraf::plugins::powerdns)
+# THIS FILE IS MANAGED BY PUPPET (created by telegraf::plugins::inputs::powerdns)
 
 ###############################################################################
 #                             PLUGIN POWERDNS                                 #
